feat: Implementa e testa a lógica de ações condicionais para CDU-06
Adiciona a lógica de negócios para determinar a visibilidade dos botões de ação "Finalizar" e "Homologar em bloco" na tela de detalhes do processo.

- Adiciona os campos `podeFinalizar`, `podeHomologarCadastro` e `podeHomologarMapa` ao `ProcessoDetalheDto`.
- Implementa a lógica para preencher esses campos no `ProcessoDetalheMapperCustom`, com base no perfil do usuário e no estado dos subprocessos.
- Adiciona testes de integração abrangentes para validar a nova lógica em vários cenários.
- Corrige um bug na lógica de segurança em `ProcessoSeguranca` que impedia o acesso de usuários com o perfil `CHEFE`.
- Atualiza o `plano-alinhamento.md` para refletir a cobertura de teste completa para o CDU-06.